--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         args: Dockerfile
     - name: swift test
-      uses: docker://norionomura/swiftlint
+      uses: docker://norionomura/swiftlint:swift-5
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
