[GitHub Action] Add Dump Event Payload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ jobs:
     name: Docker Lint
     runs-on: ubuntu-latest
     steps:
+    - name: Dump Event Payload
+      run: cat ${GITHUB_EVENT_PATH}
     - uses: actions/checkout@master
     - name: Docker Lint
       uses: docker://replicated/dockerfilelint
