--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       uses: docker://norionomura/swiftlint:swift-5
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_SHA: ${{ github.event.pull_request.head.sha }}
+        ACTION_SWIFTLINT_SHA: ${{ github.event.pull_request.head.sha }}
       with:
         entrypoint: swift
         args: test
