--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,3 +23,41 @@ jobs:
       - uses: actions/checkout@master
       - name: Docker Build
         run: docker build -t action-swiftlint .
+
+      - name: Exit Status on Errors
+        run: |
+          STATUS=$(docker run -v $(pwd):$(pwd) -w $(pwd) --rm action-swiftlint &>/dev/null; echo $?)
+          [[ $STATUS == "2" ]]
+        working-directory: ./test/errors
+        shell: bash
+
+      - name: Exit Status on No lintable files
+        run: |
+          STATUS=$(docker run -v $(pwd):$(pwd) -w $(pwd) --rm action-swiftlint &>/dev/null; echo $?)
+          [[ $STATUS == "1" ]]
+        working-directory: ./test/no-lintable-files
+        shell: bash
+
+      - name: Exit Status on Warnings
+        run: |
+          STATUS=$(docker run -v $(pwd):$(pwd) -w $(pwd) --rm action-swiftlint &>/dev/null; echo $?)
+          [[ $STATUS == "0" ]]
+        working-directory: ./test/Warnings
+        shell: bash
+
+      - name: Exit Status on Warnings with `--strict`
+        run: |
+          STATUS=$(docker run -v $(pwd):$(pwd) -w $(pwd) --rm action-swiftlint --strict &>/dev/null; echo $?)
+          [[ $STATUS == "3" ]]
+        working-directory: ./test/Warnings
+        shell: bash
+
+      - name: Output on Errors
+        run: diff <(docker run -v $(pwd):$(pwd) -w $(pwd) --rm action-swiftlint|sort) expected.txt
+        working-directory: ./test/errors
+        shell: bash
+
+      - name: Output on Warnings
+        run: diff <(docker run -v $(pwd):$(pwd) -w $(pwd) --rm action-swiftlint|sort) expected.txt
+        working-directory: ./test/Warnings
+        shell: bash
